[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/icons/pngwing.com (6).png" type="Texture" id=1]
[ext_resource path="res://images/bg/Escena de la granja en la naturaleza con granero _ Vector Gratis.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/Stabillo Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/ui/LoadSources.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/Level_Selector.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 56
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
main_menu = "res://scenes/ui/MainMenu.tscn"
level_selector = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 300 )
current = true
zoom = Vector2( 1.5, 1.1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 403, 300 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -257, -152 )

[node name="Button" type="Button" parent="Control"]
margin_left = -174.0
margin_top = -6.0
margin_right = -87.0
margin_bottom = 99.0
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="TextEdit" type="TextEdit" parent="Control"]
margin_left = 203.0
margin_top = 136.0
margin_right = 566.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )

[node name="ItemList" type="ItemList" parent="Control"]
margin_left = 287.0
margin_top = 215.0
margin_right = 466.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 2 )

[node name="Load" type="Button" parent="Control"]
margin_left = 125.0
margin_top = 500.0
margin_right = 281.0
margin_bottom = 578.0
rect_pivot_offset = Vector2( 40, -21 )
custom_fonts/font = SubResource( 3 )
text = "Cargar"
flat = true

[node name="Erase" type="Button" parent="Control"]
margin_left = 466.0
margin_top = 500.0
margin_right = 656.0
margin_bottom = 578.0
rect_pivot_offset = Vector2( 40, -21 )
custom_fonts/font = SubResource( 3 )
text = "Eliminar"
flat = true

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="Control/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Control/Load" to="." method="_load_pressed"]
[connection signal="pressed" from="Control/Erase" to="." method="_on_Erase_pressed"]
